# Segmentation_deployment

./: .dockerignore  .gitignore  CMakeLists.txt  CMakeLists_bak.txt  Dockerfile  README.md
src/: main.cpp  main_BAK.cpp
